Changes from ahmed
/classroom -> classrooms
